# Ml_Baseball

./: .gitignore  AGENTS.md  README.md  pyproject.toml
data/2026/: 2026_선수_이동_현황.csv  수비_기본기록.csv  주루_기본기록.csv  타자_기본기록.csv  타자_세부기록.csv  투수_기본기록.csv  투수_세부기록.csv  팀_수비_기본기록.csv  팀_순위.csv  팀_일자별순위.csv  팀_주루_기본기록.csv  팀_타자_기본기록.csv  팀_투수_기본기록.csv
data/modeling/: predict_dataset_2026.csv  train_dataset.csv
dy_final/: 2026_가을야구_예측결과.csv  KBO_preprocessing_v2_executable.ipynb  KBO_preprocessing_v2_executable.py  KBO_가을야구_예측_노션정리.md  KBO_가을야구_예측_전처리_v2.ipynb  KBO_가을야구_예측_전처리_심층분석.ipynb  generate_kbo_master_dashboard.py  generate_kbo_visualizations.py  kbo_2022_2026_master_dashboard.html  kbo_postseason_pipeline.py  kbo_realtime_crawler.py  make_kbo_notebook.py  make_kbo_presentation_materials.py  patch_dy_final_notebook.py  patch_dy_final_notebook_followups.py  register_kbo_midnight_task.ps1  run_kbo_midnight_update.ps1  run_kbo_notebook_outputs.py  run_kbo_pipeline_outputs.py  team_master_2022_2026.csv  리그_타격환경.csv  리그_투구환경.csv  선수이동현황_통합.csv
dy_final/kbo_outputs/: 2026_postseason_predictions.csv  2026_team_snapshot.csv  analysis_report.md  analysis_summary.json  april_rank_insight.csv  feature_importance_coefficients.csv  model_dataset_2023_2026.csv  validation_leave_one_season.csv
src/app/: app.py
src/dataset/: build_predict_dataset.py  build_train_dataset.py
src/evaluation/: metrics.py
src/preprocessing/: build_preprocessed.py  clean_player_stats.py  clean_team_rank.py  clean_team_stats.py  make_features.py
src/utils/: config.py  parser.py  paths.py
(+307 files in other folders)
