[project]
name = "ml-baseball"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.13.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "setuptools>=82.0.1",
    "shap>=0.51.0",
    "streamlit>=1.56.0",
    "tpot>=1.1.0",
    "xgboost>=3.2.0",
]
